<resources>
    <string name="app_name">TTNote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">tuanthanh.ninhthuan@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_note">Note</string>
    <string name="menu_mission">Mission</string>
    <string name="menu_remind">Remind</string>
    <string name="menu_recycle_bin">Recycle Bin</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Helps</string>
</resources>
