<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_note"
        android:icon="@drawable/ic_note"
        android:title="@string/menu_note" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_mission"
        android:title="@string/menu_mission" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_remind"
        android:title="@string/menu_remind" />
    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/ic_garbage"
        android:title="@string/menu_recycle_bin" />
</group>

<item android:title="Communicate">
    <menu>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
    </menu>
</item>

</menu>
